# supabase-axum

./: .gitignore  Cargo.toml  DEV-PLAN.md  Dockerfile  README.md  sqlx-data.json
.cursor/rules/: rules.mdc
src/: db.rs  main.rs
src/auth/: error.rs  jwks.rs  middleware.rs  mod.rs  user_context.rs
src/db/: models.rs  profile_repository.rs  schema.sql
src/routes/: echo_routes.rs  mod.rs  profile_routes.rs
